Incorporating changes from reviews.

--- a/analysis/Makefile
+++ b/analysis/Makefile
@@ -10,16 +10,25 @@ BBMAP := bbmap.sh
 BOWTIE := bowtie2
 ZIP := pigz
 
+# PARALLEL
+THREADS ?= 8
+
 # Some string processing to make dependencies easier
-READS := $(sort $(wildcard $(DATA)/*.fastq))
-BASE := $(subst _R1,, $(filter-out %_R2, $(notdir $(READS:.fastq=))))
+READS := $(wildcard $(DATA)/*_R1.fastq)
+BASE := $(subst _R1,, $(notdir $(basename $(READS))))
+
+REVIEW_READS := $(basename $(wildcard $(DATA)/review/*_R1.fastq.gz)) #strip .gz
+REVIEW_BASE := $(subst _R1,, $(notdir $(basename $(REVIEW_READS))))
 
 #================================================================================
 # Recipies
 
-all: csv secondary stats alt finalFigs.pdf paper/lubock-2017.pdf
+all: csv review secondary stats alt finalFigs.pdf paper/lubock-2017.pdf
+
+#-------------------------------------------------------------------------------
 
 csv: $(addprefix pipeline/, $(addsuffix .csv, $(BASE)))
+review: $(addprefix pipeline/, $(addsuffix .csv, $(REVIEW_BASE)))
 
 secondary: output/errs-all-samples.csv.gz\
     output/char-counts.txt.gz\
@@ -29,6 +38,8 @@ stats: $(addprefix pipeline/, $(addsuffix .baseq.txt, $(BASE)))
 
 alt: pipeline/1_nonDoped.bowtie.csv pipeline/1_nonDoped.bbmap.csv
 
+#-------------------------------------------------------------------------------
+
 finalFigs.pdf: finalFigs.Rmd \
     $(addprefix pipeline/, 1_nonDoped.bowtie.csv 1_nonDoped.bbmap.csv) \
     $(addprefix output/, errs-all-samples.csv.gz char-counts.txt.gz read-counts.txt)
@@ -37,8 +48,10 @@ finalFigs.pdf: finalFigs.Rmd \
 paper/lubock-2017.pdf: paper/lubock-2017.tex finalFigs.pdf
 	cd paper; latexmk -pdf
 
+#-------------------------------------------------------------------------------
+
 clean:
-	rm -f output/* pipeline/* finalFigs.pdf ref-seq.fasta.fai
+	rm -f output/* pipeline/* finalFigs.pdf ref-seq.fasta.fai paper/*.pdf
 	cd paper; latexmk -C
 
 .PHONY: clean
@@ -54,11 +67,25 @@ pipeline/%.trim.fastq: adapters.fasta $(sort $(DATA)/%_R1.fastq) $(sort $(DATA)/
 	@#    fasta file with adapter sequence(s) to trim
 	@#    all of the raw sequencing fastq's (NOTE will sort lexicographically)
 	@echo Trimming - $(word 2, $^) and $(word 3, $^)
-	@$(BBDUK) ref=$< in1=$(word 2, $^) in2=$(word 3, $^) out=$@ \
-	    k=21 mink=8 hdist=2 hdist2=1 ktrim=r tpe=t tbo=f -Xmx1g \
-	    overwrite=t threads=5 2> $(@:.fastq=.err)
+	@$(BBDUK) \
+	    ref=$< \
+	    in1=$(word 2, $^) \
+	    in2=$(word 3, $^) \
+	    out=$@ \
+	    stats=$(@:.fastq=.stats.txt) \
+	    k=21 \
+	    mink=8 \
+	    hdist=2 \
+	    hdist2=1 \
+	    ktrim=r \
+	    tpe=t \
+	    tbo=f \
+	    -Xmx1g \
+	    overwrite=t \
+	    threads=$(THREADS) \
+	    2> $(@:.fastq=.err)
 
-pipeline/%.filter.fastq: pipeline/eColi-phiX.fasta pipeline/%.trim.fastq
+pipeline/%.filter.fastq: eColi-phiX.fasta pipeline/%.trim.fastq
 	@# Actions:
 	@#    filter out any reads mapping to these genomes with bbduk
 	@#    get rid of any reads with N's in them
@@ -66,9 +93,20 @@ pipeline/%.filter.fastq: pipeline/eColi-phiX.fasta pipeline/%.trim.fastq
 	@#    combined eColi/PhiX genome (dynamically pulled from ncbi)
 	@#    trimmed (and interleaved) reads from previous step
 	@echo Filtering - $(word 2, $^)
-	@$(BBDUK) ref=$< in=$(word 2, $^) out=$@ stats=$(@:.fastq=.stats.txt)\
-	    interleaved=t k=27 hdist=1 ktrim=f maxns=0 -Xmx12g \
-	    overwrite=t threads=1 2> $(@:.fastq=.err)
+	@$(BBDUK) \
+	    ref=$< \
+	    in=$(word 2, $^) \
+	    out=$@ \
+	    stats=$(@:.fastq=.stats.txt) \
+	    interleaved=t \
+	    k=27 \
+	    hdist=1 \
+	    ktrim=f \
+	    maxns=0 \
+	    -Xmx12g \
+	    overwrite=t \
+	    threads=$(THREADS) \
+	    2> $(@:.fastq=.err)
 
 pipeline/%.merge.fastq: pipeline/%.filter.fastq
 	@# Actions:
@@ -76,8 +114,15 @@ pipeline/%.merge.fastq: pipeline/%.filter.fastq
 	@# Dependencies:
 	@#    filtered reads from last step
 	@echo Merging - $<
-	@$(BBMERGE) in=$< outm=$@ -Xmx4g\
-	    interleaved=t t=5 pfilter=1 overwrite=t 2> $(@:.fastq=.err)
+	@$(BBMERGE) \
+	    in=$< \
+	    outm=$@ \
+	    -Xmx4g \
+	    interleaved=t \
+	    pfilter=1 \
+	    overwrite=t \
+	    threads=$(THREADS) \
+	    2> $(@:.fastq=.err)
 
 pipeline/%.csv: ref-seq.fasta pipeline/%.merge.fastq
 	@# Actions:
@@ -88,17 +133,10 @@ pipeline/%.csv: ref-seq.fasta pipeline/%.merge.fastq
 	@#    can add python aligner to dependencies to track any changes
 	@#    in that file (useful for testing alignment algos)
 	@echo Parsing - $(word 2, $^)
-	@python $(SCRIPTS)/parse.py -p10 $^ > $@
+	@python $(SCRIPTS)/parse.py -p$(THREADS) $^ > $@
 
 #===============================================================================
 # Secondary Processing Steps
-
-pipeline/eColi-phiX.fasta:
-	@# Actions:
-	@#    Grab eColi and PhiX genomes from the ncbi
-	curl -s "https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=nuccore&amp;id=U00096.3&;rettype=fasta&;retmode=text" > $@
-	curl -s "https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi?db=nuccore&amp;id=NC_001422.1&amp;rettype=fasta&amp;retmode=text" >> $@
-
 
 pipeline/%.baseq.txt: pipeline/%.merge.fastq
 	@# Actions:
@@ -106,10 +144,15 @@ pipeline/%.baseq.txt: pipeline/%.merge.fastq
 	@# Dependencies:
 	@#    Merged reads
 	@echo Calculating base qualities for - $<
-	@$(BBDUK) in=$< qchist=$@ -Xmx2g t=1 2> /dev/null
+	@$(BBDUK) \
+	    in=$< \
+	    qchist=$@ \
+	    -Xmx2g \
+	    t=1 \
+	    2> /dev/null
 
 
-output/errs-all-samples.csv.gz: $(addprefix pipeline/, $(addsuffix .csv, $(BASE)))
+output/errs-all-samples.csv.gz: $(addprefix pipeline/, $(addsuffix .csv, $(BASE) $(REVIEW_BASE)))
 	@# Actions:
 	@#    Combine all of the output csv's into a single flat file
 	@#    Useful for downstream R analysis
@@ -123,7 +166,7 @@ output/errs-all-samples.csv.gz: $(addprefix pipeline/, $(addsuffix .csv, $(BASE)
 	@$(ZIP) $(basename $@)
 
 
-output/char-counts.txt.gz: $(addprefix pipeline/, $(addsuffix .merge.fastq, $(BASE)))
+output/char-counts.txt.gz: $(addprefix pipeline/, $(addsuffix .merge.fastq, $(BASE) $(REVIEW_BASE)))
 	@# Actions:
 	@#    Get the length of every read for every sample
 	@#    Used in per-base error rate calculations
@@ -136,9 +179,10 @@ output/char-counts.txt.gz: $(addprefix pipeline/, $(addsuffix .merge.fastq, $(BA
 	    awk -v samp=$(notdir $(var:.merge.fastq=)) '{if (NR % 4 == 1) print substr($$1, 2)","; else if (NR % 4 == 2) print length($$0)"," FS samp}' $(var) | paste - - >> $(basename $@);)
 	@$(ZIP) $(basename $@)
 
+
 output/read-counts.txt:\
-    $(addprefix pipeline/, $(addsuffix .merge.fastq, $(BASE))) \
-    $(addprefix pipeline/, $(addsuffix .csv, $(BASE)))
+    $(addprefix pipeline/, $(addsuffix .merge.fastq, $(BASE) $(REVIEW_BASE))) \
+    $(addprefix pipeline/, $(addsuffix .csv, $(BASE) $(REVIEW_BASE)))
 	@# Actions:
 	@#    get the number of reads and errs for every treatment
 	@#    Note that for our csv's we only care about the existance of an
@@ -177,8 +221,18 @@ pipeline/1_nonDoped.bbmap.alt.sam: ref-seq.fasta pipeline/1_nonDoped.merge.fastq
 	@#     k=8 is the smallest kmer (e.g. more sensitive)
 	@#     vslow=t is a macro that bumps internal setting to most sensitive
 	@#     sam=1.3 ensures compatibility with parsing script
-	$(BBMAP) in=$(word 2, $^) outm=stdout.sam ref=$< nodisk sam=1.3\
-	    vslow=t k=8 -Xmx8g mdtag=f t=15 ordered=t 2> $(@:.sam=.out) | \
+	$(BBMAP) \
+	    in=$(word 2, $^) \
+	    outm=stdout.sam \
+	    ref=$< \
+	    nodisk \
+	    sam=1.3 \
+	    vslow=t \
+	    k=8 \
+	    -Xmx8g \
+	    mdtag=f \
+	    t=$(THREADS) \
+	    ordered=t 2> $(@:.sam=.out) | \
 	    samtools calmd -e - $< > $@
 
 pipeline/ref-seq.build.out: ref-seq.fasta
@@ -199,8 +253,16 @@ pipeline/1_nonDoped.bowtie.alt.sam: pipeline/ref-seq.build.out\
 	@#     --gbar 1 allows there to be gaps in the alignment upto the first pos
 	@#     --very-sensitive is a macro to max other sensitivity settings
 	@#     -p tunes the number of procs
-	$(BOWTIE) -x $(<:.build.out=) -U $(word 2, $^) -p 15 -N 1 -L 4 \
-	    -i C,1,0 --gbar 1 --very-sensitive --no-unal \
+	$(BOWTIE) \
+	    -x $(<:.build.out=) \
+	    -U $(word 2, $^) \
+	    -p $(THREADS) \
+	    -N 1 \
+	    -L 4 \
+	    -i C,1,0 \
+	    --gbar 1 \
+	    --very-sensitive \
+	    --no-unal \
 	    --reorder 2> $(@:.sam=.out) | \
 	    samtools calmd -e - $(word 3, $^) > $@ 2> $(@:.sam=.err)
 
@@ -212,3 +274,45 @@ pipeline/%.csv: pipeline/%.alt.sam ref-seq.fasta
 	$(SCRIPTS)/samparse/samparse.py -u $< $(word 2, $^) \
 	    $(patsubst .%, %, $(suffix $(<F:.alt.sam=))) > $@
 
+#===============================================================================
+# REVIEW SPECIFICS
+
+pipeline/%.trim.fastq: review-adapters.fasta $(sort $(DATA)/review/%_R1.fastq.gz) $(sort $(DATA)/review/%_R2.fastq.gz)
+	@# Same as main, different path for review files
+	@echo Trimming - $(word 2, $^) and $(word 3, $^)
+	@$(BBDUK) \
+	    ref=$< \
+	    in1=$(word 2, $^) \
+	    in2=$(word 3, $^) \
+	    out=$@ \
+	    stats=$(@:.fastq=.stats.txt) \
+	    k=21 \
+	    mink=8 \
+	    hdist=2 \
+	    hdist2=1 \
+	    ktrim=r \
+	    tpe=t \
+	    tbo=f \
+	    -Xmx1g \
+	    overwrite=t \
+	    threads=$(THREADS) \
+	    2> $(@:.fastq=.err)
+
+
+pipeline/C%.csv: pipeline/C%.merge.fastq
+	@echo Parsing - $<
+	@$(BBDUK) \
+	    in=$< \
+	    ref=$(firstword $(subst -, , $(notdir $(<:.merge.fastq=))))-contam.fasta \
+	    out=stdout.fastq \
+	    stats=$(@:.csv=.err) \
+	    ktrim=f \
+	    hdist=2 \
+	    k=27 \
+	    overwrite=t \
+	    threads=$(THREADS) \
+	    -Xmx1g \
+	    2>> $(@:.csv=.err) | \
+	    python $(SCRIPTS)/parse.py -p10 \
+	    $(firstword $(subst -, , $(notdir $<))).fasta \
+	    - > $@
